# i3-autonamer

./: Cargo.toml  README.md  config-example.toml
src/: main.rs
