[package]
name = "i3-autonamer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-i3ipc = "0.12.1"
tokio = { version = "1.11.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0.44"
log = "0.4.14"
flexi_logger = { version = "0.19.3", default-features = false }
tokio-stream = "0.1.7"
toml = "0.5.8"
serde = "1.0.13"
serde_derive = "1.0.130"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
